--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "eslint": "^8.29.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -8,6 +10,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
+    "expo": "^47.0.8",
     "prettier": "2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
